# airbnb-app

./: .gitignore  README.md  pyproject.toml
config/: authentication.py  settings.py  urls.py
core/: urls.py  views.py
rooms/: models.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
rooms/migrations/: 0001_initial.py  0002_initial.py
users/: permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
